fix fade misalignment on year scroll

--- a/src/css/filters.less
+++ b/src/css/filters.less
@@ -107,7 +107,7 @@
         margin-bottom: -8px;
         width: floor((100% / 9) - 1);
         margin-right: 1em;
-        padding: 8px;
+        padding: 15px 8px;
       }
 
       @media @mobile-above {
